syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.javaded.grpccommon";
option java_outer_classname = "GeneratorProto";
option objc_class_prefix = "RTG";

package service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service DataServer {

  rpc AddData(GRPCData) returns (google.protobuf.Empty);

  rpc AddStreamOfData(stream GRPCData) returns (google.protobuf.Empty);

}

service AnalyticsServer {

  rpc AskForData(GRPCAnalyticsRequest) returns (stream GRPCData);

}

message GRPCData {

  int64 id = 1;
  int64 sensorId = 2;
  google.protobuf.Timestamp timestamp = 3;
  double measurement = 4;
  MeasurementType measurementType = 5;

}

enum MeasurementType {

  TEMPERATURE = 0;
  VOLTAGE = 1;
  POWER = 2;

}

message GRPCAnalyticsRequest {

  int64 batchSize = 1;

}